load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//tools:container.bzl", "go_image")

go_library(
    name = "bb_replicator_lib",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-storage/cmd/bb_replicator",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/blobstore/configuration",
        "//pkg/blobstore/replication",
        "//pkg/global",
        "//pkg/grpc",
        "//pkg/program",
        "//pkg/proto/configuration/bb_replicator",
        "//pkg/proto/replicator",
        "//pkg/util",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "bb_replicator",
    embed = [":bb_replicator_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    binary = ":bb_replicator",
    component = "bb-replicator",
    entrypoint = ["/bb_replicator"],
)
